Fix contact form spacing
Didn't quite look right.  This may need further tweaking, but it's
better.

--- a/themes/scbtheme/assets/css/style.css
+++ b/themes/scbtheme/assets/css/style.css
@@ -944,8 +944,8 @@ video {
   padding: 1rem;
 }
 
-.p-8 {
-  padding: 2rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-4 {
